fixed scrolling and spacing

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@
      background-image: -webkit-gradient(linear, left top, right top, from(rgba(20, 20, 20, 0.7)), color-stop(50%, transparent), to(transparent)), -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.75)), color-stop(7%, rgba(5, 5, 5, 0.05)), color-stop(50%, transparent), color-stop(85%, rgba(5, 5, 5, 0.06)), color-stop(93%, #141414), to(#141414)), url("Images/background.jpg");
      background-image: linear-gradient(90deg, rgba(20, 20, 20, 0.7), transparent 50%, transparent), linear-gradient(180deg, rgba(0, 0, 0, 0.75), rgba(5, 5, 5, 0.05) 7%, transparent 50%, rgba(5, 5, 5, 0.06) 85%, #141414 93%, #141414), url("Images/background.jpg");
      
-     background-position: 0px 0px, 0px 0px, 100% 0%;
+     /* background-position: 0px 0px, 0px 0px, 100% 0%; */
+     background-position: center center, center center, 100% 0%;
      background-size: auto, auto, cover;
      background-attachment: scroll, scroll, scroll;
    }
@@ -299,6 +300,7 @@
      line-height: 12px;
      letter-spacing: 0.2px;
      text-indent: 0px;
+     scroll-margin-top: 500px;
    }
    
    .navbar__link:hover {
@@ -503,7 +505,7 @@
    }
    
    .explorer__row {
-     margin-bottom: 40px;
+     margin-bottom: 110px;
      padding-left: 0px;
    }
    
